src/objects/P7S1_ExternalId__c.object
<CustomObject>
    <fields>
        <fullName>ExtIdProSedi__c</fullName>
        <description>Zeigt die Externe Id als Nummer an</description>
        <inlineHelpText>Zeigt die Externe Id als Nummer an</inlineHelpText>
        <label>ExtIdProSedi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>P7S1_Account__c</fullName>
        <description>Nimmt die ID aus Prosa, SAP oder anderen Anwendungen auf für diesen Account</description>
        <inlineHelpText>Nimmt die ID aus Prosa, SAP oder anderen Anwendungen auf für diesen Account</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Externe IDs</relationshipLabel>
        <relationshipName>P7S1_ExternalId</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>P7S1_Description__c</fullName>
        <description>Nimmt einen Beschreibungstext für diese externe ID auf</description>
        <inlineHelpText>Nimmt einen Beschreibungstext für diese externe ID auf</inlineHelpText>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>P7S1_ExtIdUniqueKey__c</fullName>
        <defaultValue>&quot;Automatisch erzeugt&quot;</defaultValue>
        <description>Generierung eines UniqueKey aus einer Kombination ExterneID.Name &amp; Source

Workflow &quot;P7S1_ExtIdUniqueKey&quot;</description>
        <externalId>true</externalId>
        <inlineHelpText>Generierung eines UniqueKey aus einer Kombination ExterneID.Name &amp; Source</inlineHelpText>
        <label>Ext. ID Unique Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>P7S1_Source__c</fullName>
        <description>In welchem System kennzeichnet diese ID diesen Account eineindeutig?</description>
        <inlineHelpText>In welchem System kennzeichnet diese ID diesen Account eineindeutig?
Wichtig ist das bei Konzerninternen Accounts immer eine separate Sachkontonummer erfasst wird.</inlineHelpText>
        <label>Quelle/System</label>
        <picklist>
            <picklistValues>
                <fullName>Debitorennr BK 29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debitorennr BK 29 - Barter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debitorennr TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nielsen-ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ProSa/ProSedi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sachkonto konzernintern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vermarkter-Id (ProSa)</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_DebNrForProSedi__c</fullName>
        <description>nur für Quelle ProSa/ProSedi wird hier die Debitorennummer TV gepflegt. Verantwortlich: 71msofakturaprosateam</description>
        <inlineHelpText>nur für Quelle ProSa/ProSedi wird hier die Debitorennummer TV gepflegt. Verantwortlich: 71msofakturaprosateam</inlineHelpText>
        <label>zugeordnete SAP Deb-Nr TV</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_DwhProRexId__c</fullName>
        <description>Liest für die DWH Schnittstelle die ProRex Account ID aus dem zugehörigen Account aus.</description>
        <formula>P7S1_Account__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Liest für die DWH Schnittstelle die ProRex Account ID aus dem zugehörigen Account aus.</inlineHelpText>
        <label>DWH ProRex Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_DwhSource__c</fullName>
        <description>Formel: Schaut was im Feld Source steht und setzt bei ProSa/ProSedi + Vermarkter-ID eine 1 , Nielsen eine 2
&quot;Debitorennr BK 29&quot;  3, &quot;Debitorennr BK 29 - Barter&quot; 4, &quot;Debitorennr TV&quot;  5, &quot;Sachkonto konzernintern&quot; 6 und sonst NULL</description>
        <formula>CASE( TEXT(P7S1_Source__c),
&quot;ProSa/ProSedi&quot;, 1,
&quot;Vermarkter-Id (ProSa)&quot;,1, 
&quot;Nielsen-ID&quot;, 2,
&quot;Debitorennr BK 29&quot;, 3,
&quot;Debitorennr BK 29 - Barter&quot;, 4,
&quot;Debitorennr TV&quot;, 5,
&quot;Sachkonto konzernintern&quot;, 6,
 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formel: Schaut was im Feld Source steht und setzt bei ProSa/ProSedi + Vermarkter-ID eine 1 , Nielsen eine 2
&quot;Debitorennr BK 29&quot;  3, &quot;Debitorennr BK 29 - Barter&quot; 4, &quot;Debitorennr TV&quot;  5, &quot;Sachkonto konzernintern&quot; 6 und sonst NULL</inlineHelpText>
        <label>DWH Source</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Externe ID</label>
    <listViews>
        <fullName>All</fullName>
        <columns>P7S1_Account__c</columns>
        <columns>P7S1_Source__c</columns>
        <columns>NAME</columns>
        <columns>P7S1_ExtIdUniqueKey__c</columns>
        <columns>P7S1_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Sachkonto_konzernintern</fullName>
        <columns>P7S1_Account__c</columns>
        <columns>P7S1_Source__c</columns>
        <columns>NAME</columns>
        <columns>P7S1_ExtIdUniqueKey__c</columns>
        <columns>P7S1_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Source__c</field>
            <operation>equals</operation>
            <value>Sachkonto konzernintern</value>
        </filters>
        <label>Sachkonto konzernintern</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Vermarkter_Ids</fullName>
        <columns>P7S1_Account__c</columns>
        <columns>P7S1_Source__c</columns>
        <columns>NAME</columns>
        <columns>P7S1_ExtIdUniqueKey__c</columns>
        <columns>P7S1_Description__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Source__c</field>
            <operation>equals</operation>
            <value>Vermarkter-Id (ProSa)</value>
        </filters>
        <label>Vermarkter-Ids</label>
        <language>de</language>
    </listViews>
    <nameField>
        <label>Externe ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Externe IDs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>P7S1_Debitorennr10Stellig</fullName>
        <active>true</active>
        <description>Debitorennummern dürfen maximal 10 Stellen haben.</description>
        <errorConditionFormula>LEN(Name) &gt; 10</errorConditionFormula>
        <errorMessage>Debitorennummern dürfen maximal 10 Stellen haben.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>P7S1_ExternIdIsNumber</fullName>
        <active>true</active>
        <description>Externe-IDs müssen eine Zahl sein</description>
        <errorConditionFormula>NOT (  ISNUMBER(Name)  )</errorConditionFormula>
        <errorMessage>Externe-IDs müssen eine Zahl sein</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomDig_Barter</fullName>
        <active>true</active>
        <description>Wenn Quellsystem Barter ist bzw. Debitorennummer für Barter-Kampagnen hinterlegt wird, darf diese sechstellige Zahl nur mit 287/288 für Rechungsempfänger Inland oder mit 289 Rechungsempfänger Ausland beginnen</description>
        <errorConditionFormula>NOT ( CONTAINS ($Profile.Name ,&quot;ministrator&quot;)) 
&amp;&amp; 
ISPICKVAL(P7S1_Source__c, &quot;Debitorennr BK 29 - Barter&quot;) 
   &amp;&amp; 
    NOT(
      (P7S1_Account__r.BillingCountry = $Label.CountryGermany
      &amp;&amp;
      (OR(BEGINS(Name,&quot;287&quot;),BEGINS(Name,&quot;288&quot;))))
          || 
               (P7S1_Account__r.BillingCountry &lt;&gt; $Label.CountryGermany
               &amp;&amp; BEGINS(Name,&quot;289&quot;))
)</errorConditionFormula>
        <errorMessage>Bitte bei Barter beachten, dass im Falle von Rechungsempfänger Inland (Deutschland) die Id mit 287 oder 288 beginnen muss und bei Rechungsempfänger Ausland mit 289.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SomTv_AccZuUeberpruefen_ExterneIDProtect</fullName>
        <active>false</active>
        <description>Wenn Haken dran ist dann keine Bearbeitung am Externe ID</description>
        <errorConditionFormula>P7S1_Account__r.SomTv_ZuUeberpruefenAcc__c</errorConditionFormula>
        <errorMessage>Wenn Account noch überprüft wird dann können keine Änderungen an Externe ID vorgenommen werden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Som_BerechtigungQuelleSystem</fullName>
        <active>true</active>
        <description>Diverse Externe Ids pro Quelle/System dürfen nur von bestimmten Unternehmensbereichen der SOM angelegt werden (TV/Digital) oder wird nach Abteilungen/Profilen sogar unterschieden.</description>
        <errorConditionFormula>NOT ( CONTAINS ($Profile.Name ,&quot;ministrator&quot;))
&amp;&amp;
(

AND(ISPICKVAL( P7S1_Source__c , &quot;Nielsen-ID&quot;), NOT( $Profile.Name = &quot;SomTv_SalesSteering&quot;))
 || 
AND(ISPICKVAL( P7S1_Source__c , &quot;ProSa/ProSedi&quot;), NOT( BEGINS( $Profile.Name , &quot;SomTv&quot;) ))
 || 
AND(ISPICKVAL( P7S1_Source__c , &quot;Debitorennr BK 29&quot;), NOT( BEGINS( $Profile.Name , &quot;SomDig&quot;) ))
 || 
AND(ISPICKVAL( P7S1_Source__c , &quot;Debitorennr BK 29 - Barter&quot;), NOT( BEGINS( $Profile.Name , &quot;SomDig&quot;) ))
 || 
AND(ISPICKVAL( P7S1_Source__c , &quot;Sachkonto konzernintern&quot;), NOT( BEGINS( $Profile.Name , &quot;SomDig&quot;) ))
 || 
AND(ISPICKVAL( P7S1_Source__c , &quot;Debitorennr TV&quot;), NOT(  BEGINS( $Profile.Name , &quot;SomTv&quot;) ))

)</errorConditionFormula>
        <errorMessage>Die Externen IDs dürfen je nach Quelle/System ausschließlich von diversen Unternehmensbereichen/Abteilungen der SevenOne Media geschrieben werden. Sie verfügen nicht über die entsprechende Berechtigung der gewählten Quelle/System.</errorMessage>
    </validationRules>
</CustomObject>